--- a/app.json
+++ b/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
-    "pages/login/login",
-    "pages/order/cart/cart",
+      "pages/login/login",
+      "pages/order/cart_busi/cart_busi",
+ 
+ 
     "pages/order/doing_search/doing_search",
+    "pages/order/cart/cart",
     "pages/index/index",
     "pages/order/site_order_new/site_order_new",
     "pages/renchou/renchou",
